Added About Text

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>My name is Camille Chabaro, I'm 28 years old and this is my first deployed website using Node JS.</p>
         <img class="portrait" src="./images/my_photo_1.jpeg" alt="camille chabaro">
     </div>
 
